CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.0
 Features
  * Use Stax for metars ncss xml writing - for now rely on using 1.6
 Libraries
  * commons-fileUpload 1.2.1
  * commons-io 1.4

  Release Details:
   02:
    Debug commands now implemented in DebugServlet
    JMX: NetcdfFileCacheMonitor
    UsageLog : handling messages to ThreddsServlet.log
    NcDODSServlet : set "dataset" session attribute