@@ -4,6 +4,9 @@ Build Date = @BUILDTIME@
 
 Changes in version 4.0
  Features
+  * Add new configuration options to threddsConfig.xml to enable various services:
+    "allow" for CatalogGen, DLwriter, and DqcService; and "allowRemote" for
+    CatalogServices, DLwriter, and WCS. All new options default to false.
   * Use Stax for metars ncss xml writing - for now rely on using 1.6
  Libraries
   * commons-fileUpload 1.2.1
